Fix favicon links in index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bytegensolution Solutions</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Lotech is the best design for Business 2024. Lotech is a smooth and colorful HTML Template, perfect suitable for Business HTML Template. It includes everything you need for the website development." />
 
